# mini-golf

./: CMakeLists.txt  README.md
src/: Ball.cpp  Ball.hpp  Entity.hpp  Game.cpp  Game.hpp  main.cpp
src/core/: Game.cpp  Game.hpp
src/entities/: Ball.cpp  Ball.hpp  Obstacle.cpp  Obstacle.hpp  Particle.cpp  Particle.hpp
src/systems/: InputHandler.cpp  InputHandler.hpp  ObstacleGenerator.cpp  ObstacleGenerator.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
src/utils/: Colors.hpp  Entity.hpp  ResourceManager.hpp
